[gd_scene load_steps=2 format=3 uid="uid://he2b26ykwxqa"]

[ext_resource type="Script" path="res://Scenes/Func/CheckArea/check_area_component.gd" id="1_6d223"]

[node name="CheckAreaComponent" type="Area2D"]
collision_layer = 0
collision_mask = 16
monitorable = false
script = ExtResource("1_6d223")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
